Connexion to Brevo + create contact

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,9 @@ server.servlet.context-path=/
 # Jackson Configuration
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.time-zone=UTC
+
+# Brevo Configuration
+brevo.api-key=${BREVO_API_KEY}
+brevo.api-url=${BREVO_API_URL:https://api.brevo.com/v3}
+brevo.newsletter-list-id=${BREVO_NEWSLETTER_LIST_ID:3}
+
