Add register and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=dzap
 
 # PostgreSQL Configuration - Utilise les variables d'environnement
 # Pour IntelliJ : Run > Edit Configurations > Environment variables
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/dzap}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -39,3 +39,6 @@ brevo.api-key=${BREVO_API_KEY}
 brevo.api-url=${BREVO_API_URL:https://api.brevo.com/v3}
 brevo.newsletter-list-id=${BREVO_NEWSLETTER_LIST_ID:3}
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
